JumpScript/tests/baselines/reference/superCallInsideClassExpression.errors.txt
tests/cases/compiler/superCallInsideClassExpression.jump(8,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== tests/cases/compiler/superCallInsideClassExpression.jump (1 errors) ====
    class A {
    }
    
    class C {
    }
    
    class B extends A {
        constructor() {
        ~~~~~~~~~~~~~~~
    
    
            var D = class extends C {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                constructor() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
                    super();
    ~~~~~~~~~~~~~~~~~~~~~~~~
                }
    ~~~~~~~~~~~~~
            }
    ~~~~~~~~~
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }